<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activity.LoginActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="115dp"
            android:layout_height="126dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerVertical="true"
            android:layout_marginTop="20dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Email"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/company_name"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center|left"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            app:startIconDrawable="@drawable/ic_person"
            tools:ignore="RtlHardcoded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/UserName_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Password"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Email"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/password"
            android:minHeight="48dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_lock"
            tools:ignore="RtlHardcoded">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Password_EditText"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_below="@+id/Password"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>
</layout>