<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="caring"
            type="com.example.enursejobs.db.model.Caring"/>
        <variable name="CaringCallBack"
            type="com.example.enursejobs.ui.adapter.CaringClickCallBack"/>
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/caring_cardv"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:minHeight="150dp"
        android:onClick="@{() ->  CaringCallBack.onClick(caring)}"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardUseCompatPadding="true">
        <RelativeLayout
            android:id="@+id/fragment_caring"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">
            <LinearLayout
                android:id="@+id/first_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/caring_nurse_name_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/nurse_name"
                    android:text="@{caring.nurseName}"
                    android:textSize="20sp"
                    android:textStyle="normal"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/caring_patientname_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/patient_name"
                    android:text="@{caring.patientName}"
                    android:textAlignment="viewEnd"
                    android:textSize="20sp"
                    android:textStyle="normal"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/second_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_row"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/caring_caringtypename_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/caringtype_name"
                    android:text="@{caring.caringtypeName}"
                    android:textSize="15sp"
                    android:textStyle="normal"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/caring_status_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/caring_status"
                    android:text="@{caring.status}"
                    android:textSize="15sp"
                    android:textAlignment="viewEnd"
                    android:textStyle="normal"/>
            </LinearLayout>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/caring_time_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/second_row"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/caring_time"
                android:text="@{caring.time}"
                android:textSize="20sp"
                android:textStyle="normal"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/caring_description_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/caring_time_tv"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/caring_description"
                android:text="@{caring.description}"
                android:textSize="15sp"
                android:textStyle="normal"/>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
