<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"/>
        <variable name="nurse"
            type="com.example.enursejobs.db.model.Nurse"/>
        <variable
            name="nurseViewModel"
            type="com.example.enursejobs.viewmodel.NurseViewModel" />
    </data>

<RelativeLayout
    android:id="@+id/fragment_nurse"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp"
    tools:context=".ui.fragment.NurseFragment">
    <TextView
        android:id="@+id/text_nurse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="20sp"/>
    <LinearLayout
        android:id="@+id/first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_nurse"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nurse_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:ems="10"
            app:errorEnabled="true"
            android:hint="@string/nurse_name"
            android:textSize="20sp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{nurse.name}" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nurse_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            app:errorEnabled="true"
            android:hint="@string/nurse_phone"
            android:textSize="20sp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:text="@{nurse.phone}" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/second_row"
        android:layout_below="@id/first_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nurse_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            app:errorEnabled="true"
            android:hint="@string/nurse_password"
            android:textSize="20sp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nurse_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            app:errorEnabled="true"
            android:hint="@string/nurse_email"
            android:textSize="20sp">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="@{nurse.email}" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/third_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@id/second_row">
        <Button
            android:id="@+id/updateNurseBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/updateBtn"
            style="?android:attr/buttonBarStyle"/>
        <Button
            android:id="@+id/deleteNurseBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/deleteBtn"
            style="?android:attr/buttonBarStyle"/>
    </LinearLayout>
</RelativeLayout>
</layout>
