<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable name="profileName"
            type="String"/>
        <variable name="profileEmail"
            type="String"/>
        <variable
            name="CaringsisLoading"
            type="boolean" />
    </data>


    <LinearLayout
        android:id="@+id/home_frg_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/caring_cardv"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:minHeight="100dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardUseCompatPadding="true">
            <RelativeLayout
                android:id="@+id/fragment_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/caring_profile_name_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/profile_name"
                    android:text="@{profileName}"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/caring_profile_email_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/caring_profile_name_tv"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:contentDescription="@string/profile_email"
                    android:text="@{profileEmail}"
                    android:textSize="15sp"
                    android:textStyle="normal"/>
            </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/caring_sv"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:layout_marginTop="8dp"/>
        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/caringloading_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/loading_carings"
            android:textAlignment="center"
            app:visibleGone="@{CaringsisLoading}" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/caring_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/caring_list"
            app:layoutManager="LinearLayoutManager"
            app:visibleGone="@{!CaringsisLoading}" />
    </LinearLayout>
</layout>