<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="patient"
            type="com.example.enursejobs.db.model.Patient"/>
        <variable name="PatientCallBack"
            type="com.example.enursejobs.ui.adapter.PatientClickCallBack"/>
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/patient_cardv"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:minHeight="100dp"
        android:onClick="@{() ->  PatientCallBack.onClick(patient)}"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardUseCompatPadding="true">
        <RelativeLayout
            android:id="@+id/fragment_patient"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp">
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/patient_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/patient_name"
                android:text="@{patient.name}"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/patient_status_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_below="@id/patient_name_tv"
                android:contentDescription="@string/patient_status"
                android:text="@{patient.isStopped+``}"
                android:textSize="15sp"
                android:textStyle="normal"/>
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/patient_roomPhPath_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_below="@id/patient_status_tv"
                android:contentDescription="@string/patient_roomFilePath"
                android:text="@{patient.roomPhotoPath}"
                android:textSize="15sp"
                android:textStyle="normal"/>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
